@@ -433,7 +433,7 @@
 
 <addon id="script.lrclyrics"
        name="LRC Lyrics"
-       version="1.3.4"
+       version="1.3.5"
        provider-name="Taxigps">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
